<resources>
    <string name="app_name">CopenhagenBuzz</string>
    <string name="button_description">Button which adds events</string>
    <string name="event_description">Event description</string>
    <string name="event_type">Event type</string>
    <string name="event_date">Event date</string>
    <string name="event_location">Event location</string>
    <string name="event_name">Event name</string>
    <string name="guest_user">Guest</string>
    <string name="login_button">Login</string>
    <string name="fragment_calender">Calender</string>
    <string name="fragment_maps">Maps</string>
    <string name="fragment_favorites">Favorite Events</string>
    <string name="fragment_timeline">Timeline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Add new event</string>
    <string name="logout_button">Logout</string>
    <string name="fragment_add_event">Add Event</string>
    <string name="event_image">Event image</string>
    <string name="edit_text_button">Edit</string>
    <string name="edit_event_button">Edit</string>
    <string name="info_on_event_button">Info</string>
    <string name="event_type_account">C</string>
    <string name="timeline">Timeline</string>
    <string name="user_info_title">User Info</string>
    <string name="profile_image">Profile Image</string>
    <string name="guest_account">Guest Account</string>
    <string name="guest_email_com">guest@email.com</string>
    <string name="account">Account</string>
    <string name="new_event">New Event</string>
    <string name="event_history">Event History</string>
    <string name="notifications">Notifications</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_settings">User Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="facebook_application_id">1360877908442521</string>
    <string name="fragment_edit_event">Edit Event</string>
    <string name="cancel_button_description">Cancel editing an event</string>
    <string name="delete_event_button">Delete</string>
    <string name="preference_file_key">dk.itu.moapd.copenhagenbuzz.ceel.PREFERENCE_FILE_KEY</string>
    <string name="text_latitude">Latitude</string>
    <string name="text_longitude">Longitude</string>
    <string name="text_not_available">Not available</string>
    <string name="text_altitude">Altitude\n</string>
    <string name="text_speed">Speed</string>
    <string name="text_speed_km">%d KM</string>
    <string name="text_time">Time</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="sort_by_category">Filter by category</string>
    <string name="sort_by">Filter by: All</string>
    <string name="image_preview_desc">Image Preview</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="button_edit_event_description">Edit event</string>
</resources>