<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_imageview"
            android:layout_margin="@dimen/margin_medium"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_preview_desc"
            android:background="?colorSurfaceContainerLow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_capture_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_photo"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            app:icon="@drawable/baseline_add_a_photo_24"
            app:iconGravity="textStart"
            app:layout_constraintStart_toStartOf="@id/image_preview"
            app:layout_constraintTop_toBottomOf="@id/image_preview"
            app:layout_constraintEnd_toStartOf="@id/button_select_photo"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:text="@string/select_from_gallery"
            app:icon="@drawable/baseline_add_photo_alternate_24"
            app:iconGravity="textStart"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/image_preview"
            app:layout_constraintStart_toEndOf="@id/button_capture_photo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:hint="@string/event_name"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_select_photo"
            app:startIconDrawable="@drawable/baseline_festival_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="?attr/colorSurface"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/event_location"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_name"
            app:startIconDrawable="@drawable/baseline_add_location_alt_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="?attr/colorSurface"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/event_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_location"
            app:startIconDrawable="@drawable/baseline_calendar_month_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:focusable="false"
                android:clickable="true"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/event_type"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_date"
            app:startIconDrawable="@drawable/baseline_celebration_24">

            <AutoCompleteTextView
                android:id="@+id/dropdown_event_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="?attr/colorSurface"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_event_description"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_text_field"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_medium"
            android:hint="@string/event_description"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field_event_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_event_description"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="@dimen/height_text_field"
                android:inputType="text"
                android:background="?attr/colorSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_edit_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:clickable="true"
            app:backgroundTint="?attr/colorSecondaryContainer"
            app:tint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/baseline_save_24"
            android:contentDescription="@string/button_edit_event_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>